syntax = "proto3";

package todoPackage;

service Todo {
  rpc createTodo(TodoItem) returns (TodoItem);
  rpc readTodos(VoidNoParam) returns (TodoItems);
  rpc readOneTodo(ReadOneInput) returns (TodoItem);
  rpc readTodosStream(VoidNoParam) returns (stream TodoItem);
}

message VoidNoParam {}

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}

message ReadOneInput {
  int32 id = 1;
}
